...
  const iconColor = isDark ? '#7d90b1' : '#8a8f98';

  return (
    <>
      <View style={styles.headerRow}>
        <View>
          <Text style={styles.title}>Pokédex</Text>
          <Text style={styles.subtitle}>
            見つけたポケモンをコレクションしよう
          </Text>
        </View>
        <View style={styles.ball}>
          <View style={styles.ballBottomHalf} />
...
